@@ -15,6 +15,10 @@ tests page...</H3>
 <BR>Click <a href="test.htm">here</a> to go to original testing page...
 <BR>&nbsp;
 <CENTER><TABLE CELLSPACING=5 BORDER COLS=2 WIDTH="40%" NOSAVE >
+<TR>
+<TH>First header</TH>
+<TH>Second</TH>
+</TR>
 <TR ALIGN=CENTER NOSAVE>
 <TD WIDTH="40%" NOSAVE>Top left
 <BR>(two lines expression)
@@ -67,7 +71,7 @@ gjg jg gjhfg fg gjh gjf jgf jgj f gjfgj kfajg&nbsp;</TD>
 </TR>
 </TABLE>
 
-<P>This is "default" table - with no sizes givev:
+<P>This is "default" table - with no sizes given:
 <BR>&nbsp;
 <TABLE BORDER COLS=4 WIDTH="100%" NOSAVE >
 <TR NOSAVE>
