@@ -480,6 +480,7 @@ All (GUI):
 - Moved yield functions to wxEventLoopBase and implemented for wxMSW and wxGTK
   a selective wxEventLoopBase::YieldFor() function.
   Added also wxEventLoopBase::IsYielding to help cure re-entrancy problems with Yield().
+- Render <th> element contents in bold in wxHTML.
 
 wxGTK:
 
